--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-		<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Modak&family=Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Grocery Assistant App!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/burger.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>GroceryShopping | Who? What?</title>
+</head>
+<body>
+    <div class="flow-text" id="message">{{message}}</div>
+    <div class="container">
+        {{{body}}}
+    </div>
+
+    <footer class="text-right bg-dark text-white">
+        2020 Grocery Assistance App By Team KIA 
+    </footer>
+
+
+    <script src="./assets/js/main.js"></script>
+</body>
 </html>
