--- a/views/partials/index.handlebars
+++ b/views/partials/index.handlebars
@@ -1,23 +1,34 @@
 <div class="card">
     <div id="main-title" class="text-center card-img-top">
-        <h1 class="text-center align-middle">Grocery Shopping List</h1>
+        <h1 class="text-center align-middle">Grocery Assistance List</h1>
     </div>
-    <div class="card-body">
+
+
+ <div class="card-body">
         <h5 class="card-title text-center">Instructions</h5>
-        <p class="card-text">Create a grocery shopping list and assign the item to someone in your hosehold. You can update your records when
-            the item has been purchased</p>
-        <form action="/products" method="POST">
+        <p class="card-text">Create a grocery shopping list and assign the item to everyone in your hosehold. You can
+            update your records when
+            the item has been purchased</p> 
+
+    
+      <form action="/products" method="POST">
             <div class="form-group">
                 <label for="item">Item name</label>
                 <input name="item" type="text" class="form-control" id="item" placeholder="I'm running out of...">
             </div>
-            <div class="form-group">
-                <label for="person">Person</label>
-                <input name="person" type="text" class="form-control" id="person" placeholder="Who's buying it...">
-            </div>
-            <div class="text-center">
-                <button id="btnSubmit" type="submit" class="btn btn-lg btn-danger">Send</button>
-            </div>
+
+        </form>
+
+
+        <div class="form-group">
+            <label for="person">Person</label>
+            <input name="person" type="text" class="form-control" id="person" placeholder="Who's buying it...">
+        </div>
+        <div class="text-center">
+            {{!-- <button id="btnSubmit" type="submit" class="btn btn-lg btn-danger">Send</button> --}}
+            <a class="waves-effect waves-light btn-large  "><i class="material-icons right">local_grocery_store</i>SEND</a>
+
+        </div>
         </form>
     </div>
 </div>
@@ -28,16 +39,16 @@
     </a>
     {{#each itemPending}}
 
-        <a href="#" class="d-flex justify-content-between list-group-item list-group-item-action">
-            <div>
-                <strong>Product:</strong> {{this.item}} ||
-                <strong>Who:</strong> {{this.person}}
-            </div>
-            <div>
-                <i class="fa fa-check" aria-hidden="true" data-mapid="{{this.id}}"></i>
-                <i class="fa fa-times" aria-hidden="true" data-mapid="{{this.id}}"></i>
-            </div>
-        </a>
+    <a href="#" class="d-flex justify-content-between list-group-item list-group-item-action">
+        <div>
+            <strong>Product:</strong> {{this.item}} ||
+            <strong>Who:</strong> {{this.person}}
+        </div>
+        <div>
+            <i class="fa fa-check" aria-hidden="true" data-mapid="{{this.id}}"></i>
+            <i class="fa fa-times" aria-hidden="true" data-mapid="{{this.id}}"></i>
+        </div>
+    </a>
 
     {{/each}}
 </div>
@@ -47,16 +58,17 @@
         Completed
     </a>
     {{#each itemComplete}}
-        <a href="#" class="d-flex justify-content-between list-group-item list-group-item-action">
-            <div>
-                <strong>Product:</strong> {{this.item}} ||
-                <strong>Who:</strong> {{this.person}}
-            </div>
-            <div>
-                <i class="fa fa-times" aria-hidden="true" data-mapid="{{this.id}}"></i>
-            </div>
-        </a>
+    <a href="#" class="d-flex justify-content-between list-group-item list-group-item-action">
+        <div>
+            <strong>Product:</strong> {{this.item}} ||
+            <strong>Who:</strong> {{this.person}}
+        </div>
+        <div>
+            <i class="fa fa-times" aria-hidden="true" data-mapid="{{this.id}}"></i>
+        </div>
+    </a>
     {{/each}}
 </div>
 <br />
-<br />
+<br />  
+
