--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,3 @@
-
 .container > .card {
     margin-top: 2em;
 }
@@ -24,27 +23,79 @@
 
 #main-title {
     width: 100%;
-    height: 15em;
+    height: 10em;
     background: #cecece url('https://images.unsplash.com/photo-1550989460-0adf9ea622e2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80') center no-repeat;
     background-size: cover;
 }
+
 
 #main-title h1 {
     padding: 0.8em;
     color: #FFF;
     font-family: 'Sacramento', cursive;
-    font-size: 5em;
+    font-size: 4em;
+   /* text-shadow: 2px 2px 1px #06AD32; */
+   text-shadow: 2px 2px 1px red;
+}
+
+#main-title-two  {
+    width: 100%;
+    height: 20em;
+    background: #cecece url('https://images.unsplash.com/photo-1501523460185-2aa5d2a0f981?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1403&q=80') center no-repeat;
+    background-size: cover;
+}
+
+#main-title-two h1 {
+    padding: 0.8em;
+    color: #FFF;
+    font-family: 'Sacramento', cursive; 
+   /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    font-size: 4em;
     text-shadow: 2px 2px 1px #06AD32;
 }
+
+
+
+
+.form-control {
+    font-family: Arial, Helvetica, sans-serif; 
+    color: red;
+}
+
 
 #completed > a.bg-info {
     background-color: #0ea731 !important;
 }
 
+
+
+.container{
+    text-align: center;
+}
+
+
 footer {
     margin-top: 1em;
     padding: 1em;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px; 
+     font-size: 30;
+     text-align: center;
 }
+
+     body {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+      }
+    
+      main {
+        flex: 1 0 auto;
+      }
+
+
 
 @media (max-width: 991.98px) { 
     #main-title h1 {
