--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+    <link rel="stylesheet" href="/assets/style.css">
     <!--Import Google Icon Font-->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-<!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>GroceryShopping | Who? What?</title>
+
+
+
+    <title>Grocery Assistance App</title>
 </head>
-<body>
-    <div class="flow-text" id="message">{{message}}</div>
-    <div class="container">
-        {{{body}}}
-    </div>
-
-    <footer class="text-right bg-dark text-white">
-        2020 Grocery Assistance App By Team KIA 
-    </footer>
 
 
-    <script src="./assets/js/main.js"></script>
-</body>
+<header>
+    <nav>
+        <div class="nav-wrapper  teal accent-4">
+            <!-- <a href="#" class="brand-logo">Logo</a> -->
+            <img src= "/assets/kia.png" class="brand-logo center" width="300" height="50"> 
+        <!--    <img class="brand-logo center" width="600" src="/public/kia.png"> -->
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="home.handlebars">SEARCH</a></li>
+                <li><a href="index.handlebars">ADD-LIST</a></li>
+                <!--<li><a href="collapsible.html">JavaScript</a></li> -->
+            </ul>
+        </div>
+    </nav>
+
+    <body>
+        <div class="flow-text" id="message">{{message}}</div>
+        <div class="container">
+            {{{body}}}
+        </div>
+
+
+
+        <footer class="page-footer teal accent-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <p= class "white-text  center">© 2020 Created By Team KIA Ikenna, Ian and Araya</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+
+
+    </body>
+
 </html>
