--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,4 +17,16 @@
     {{{ body }}}   
     </div> 
 </body>
+
+
+
+
+
+
+<footer class="footer">
+    <div class="two-toned-footer-color"></div>
+    <p class="text-muted text-muted-footer text-center">
+      &copy; Copyright 2020 Created by TEAM KIA
+    </p>
+  </footer>
 </html>
