--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,52 @@
 
+
+#main-title {
+    width: 100%;
+    height: 20em;
+    background: #cecece url('https://images.unsplash.com/photo-1550989460-0adf9ea622e2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80') center no-repeat;
+    background-size: cover;
+}
+
+#main-title h1 {
+    padding: 0.8em;
+    color: #FFF;
+    font-family: 'Sacramento', cursive;
+    font-size: 4em;
+   /* text-shadow: 2px 2px 1px #06AD32; */
+   text-shadow: 2px 2px 1px red;
+}
+
+#main-title-two  {
+    width: 100%;
+    height: 20em;
+    background: #cecece url('https://images.unsplash.com/photo-1501523460185-2aa5d2a0f981?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1403&q=80') center no-repeat;
+    background-size: cover;
+}
+
+#main-title-two h1 {
+    padding: 0.8em;
+    color: #FFF;
+    font-family: 'Sacramento', cursive; 
+   /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    font-size: 4em;
+    text-shadow: 2px 2px 1px #06AD32;
+}
+
+
+
+
+
+    .footer {
+      position:absolute;
+     bottom:0;
+     width:100%;
+     height:60px; 
+      font-size: 30;
+      text-align: center;
+      border-top: 8px ;
+      height: 50px;
+      background-color: black;
+    }
+    
+    
+    
