--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,13 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/stores">Stores</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+ <a class="navbar-brand" href="#">
+ <img src="./assets/css/kia.png" width="300" height="50"/>
+
+ </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/">HOME<span class="sr-only">(current)</span></a>
       </li>
-    </ul>
-  </div>
+      <li class="nav-item">
+        <a class="nav-link" href="/stores">STORE</a>
+      </li>
+      
 </nav>
