--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css"/>
     <title>Grocery Assistance App</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/public/assets/js/grocery.js"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="/assets/js/grocery.js" type="text/javascript"></script>
+    <script src="/assets/js/api.js" type="text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     {{>navbar}}
