--- a/views/partials/stores.handlebars
+++ b/views/partials/stores.handlebars
@@ -1,3 +1,5 @@
+
+
 <div class="container-fluid">
     <h1>Locate Supermarkets</h1>
     <div class="row">
@@ -5,12 +7,16 @@
             <div class="container">
                 <div class="input-group mb-3">
                     <button type="button" id="SearchBtn" class="btn btn-primary btn-lg">search</button>
-                    <input type="text" id="Search-Term" class="form-control" aria-label="city name"
+                    <input type="text" id="Search-City" class="form-control" aria-label="city name"
                         aria-describedby="basic-addon2">
                 </div>
             </div>
         </div>
         <div class="col-md-8">
         </div>
+        <div class="row1">
+            <div class="container" id="results-view"></div>
+        </div>
+
     </div>
 </div>
