--- a/views/stores.handlebars
+++ b/views/stores.handlebars
@@ -13,4 +13,9 @@
         <div class="col-md-8">
         </div>
     </div>
+    <div class="row1">
+        <div class="container1">
+            
+        </div>
+    </div>
 </div>
