ikenna formatting changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,8 @@
     </div>
 
     <div class="card-body">
-        <h5 class="card-title text-center">Instructions</h5>
-        <p>A grocery assitant that not only keeps track of whether items have been purchased or not but also locates the
+        <h5 class="card-title text-center">Overview</h5>
+        <p>A grocery assistant that not only keeps track of whether items have been purchased or not but also locates the
             closest supermarkets in your area.</p>
 
     </div>
