--- a/views/stores.handlebars
+++ b/views/stores.handlebars
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <div class="container">
                 <div class="input-group mb-3">
-                    <button type="button" id="SearchBtn" class="btn btn-primary btn-lg">Search</button>
+                    <button type="button" id="SearchBtn" class="btn btn-primary btn-lg">Zipcode</button>
                     <input type="text" id="Search-City" class="form-control" aria-label="city name"
                         aria-describedby="basic-addon2">
                 </div>
@@ -27,7 +27,6 @@
     </div>
     <div class="row1">
         <div class="container1">
-            
         </div>
     </div>
 </div>
