--- a/views/stores.handlebars
+++ b/views/stores.handlebars
@@ -1,28 +1,33 @@
+  
 {{!--<div class="container-fluid"> 
     <h1>Locate Supermarkets</h1>--}}
 <div class="card">
     <div id="main-title-two" class="text-center card-img-top">
         <h1 class="text-center align-middle">Grocery Assistance Search</h1>
     </div>
- <br>
- <br>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="container">
-                    <div class="input-group mb-3">
-                        <button type="button" id="SearchBtn" class="btn btn-primary btn-lg">Search</button>
-                        <input type="text" id="Search-Term" class="form-control" aria-label="city name"
-                            aria-describedby="basic-addon2">
-                    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container">
+                <div class="input-group mb-3">
+                    <button type="button" id="SearchBtn" class="btn btn-primary btn-lg">Zipcode</button>
+                    <input type="text" id="Search-City" class="form-control" aria-label="city name"
+                        aria-describedby="basic-addon2">
                 </div>
             </div>
-            <div class="col-md-8">
+        </div>
+        <div class="col-md-8">
+        </div>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="container" id="results-view">
+                </div>
             </div>
         </div>
     </div>
     <div class="row1">
         <div class="container1">
-            
         </div>
     </div>
 </div>
